# apeiron

./: Cargo.toml  README.md
.github/workflows/: build.yml
papers/rcmse/: mse_review.md  mse_tutorial.md  multiscale_entropy_analysis.md  multivariate_rcmse.md
papers/ssecs/: wavelet_malware_detection.md
src/: analysis.rs  gpu.rs  hilbert.rs  hilbert_refiner.rs  lib.rs  main.rs  wavelet_malware.rs
src/analysis/: byte.rs  entropy.rs  jsd.rs  kolmogorov.rs  mod.rs  rcmse.rs  ssecs.rs  wavelet.rs
src/app/: mod.rs  state.rs  types.rs
src/gpu/: mod.rs  renderer.rs
src/gpu/shaders/: digraph.wgsl  hilbert.wgsl  phase_space.wgsl  similarity.wgsl
src/hilbert/: curve.rs  mod.rs  refiner.rs
src/shaders/: phase_space.wgsl  similarity.wgsl
src/util/: color.rs  format.rs  mod.rs
src/viz/: generators.rs  mod.rs
