[package]
name = "apeiron"
version = "0.1.0"
edition = "2021"
description = "Binary file entropy and complexity visualizer using Hilbert curves"
license = "MIT"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
# Tiered compression for Kolmogorov complexity approximation
# Tier 1-2 (≤64MB): XZ/LZMA - best compression ratio
xz2 = "0.1"
# Tier 3-5 (64MB+): Zstd - fast with good compression
zstd = { version = "0.13", default-features = false, features = ["zstdmt"] }
memmap2 = "0.9"
# Portable SIMD for high-performance algorithms
wide = "0.7"

# Use xdg-portal on Linux by default, but allow fallback to gtk3
[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[profile.release]
opt-level = 3
lto = true
